--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^4.0.8",
     "memory-cache": "^0.2.0",
-    "node-html-parser": "^5.2.0"
+    "node-html-parser": "^5.2.0",
+    "vm2": "^3.9.5"
   }
 }
