--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "front-matter": "^4.0.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
+    "json-normalize": "^1.1.2",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.8",
     "memory-cache": "^0.2.0",
     "node-html-parser": "^5.2.0",
+    "source-map-support": "^0.5.21",
     "vm2": "^3.9.5"
   }
 }
