--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
   "type": "module",
   "scripts": {
     "build": "node --experimental-modules --experimental-specifier-resolution=node ./src/build.js",
-    "watch": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/build.js"
+    "watch:build": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/build.js",
+    "dev": "node --experimental-modules --experimental-specifier-resolution=node ./src/watch.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.0.0",
+    "chokidar": "^3.5.2",
+    "connect": "^3.7.0",
     "cosmiconfig": "^7.0.1",
     "front-matter": "^4.0.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "json-normalize": "^1.1.2",
+    "livereload": "^0.9.3",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.8",
     "memory-cache": "^0.2.0",
     "node-html-parser": "^5.2.0",
+    "serve-static": "^1.14.2",
     "source-map-support": "^0.5.21",
     "vm2": "^3.9.5"
   }
