fix: md components

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "front-matter": "^4.0.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
+    "html-entities": "^2.3.2",
     "json-normalize": "^1.1.2",
     "livereload": "^0.9.3",
     "lodash-es": "^4.17.21",
@@ -27,6 +28,11 @@
     "memory-cache": "^0.2.0",
     "node-html-parser": "^5.2.0",
     "prettier": "^2.5.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
+    "remark-rehype": "^10.1.0",
+    "remarkable": "^2.0.1",
     "serve-static": "^1.14.2",
     "shortid": "^2.2.16",
     "source-map-support": "^0.5.21",
