--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node --experimental-modules --experimental-specifier-resolution=node ./src/build.js",
-    "play": "node --experimental-modules --experimental-specifier-resolution=node ./src/playground.js",
-    "watch:build": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/build.js",
-    "dev": "node --experimental-modules --experimental-specifier-resolution=node ./src/watch.js"
+    "build": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
+    "play": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/playground.js",
+    "watch:build": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
+    "dev": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/watch.js"
   },
   "author": "",
   "license": "MIT",
