--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serve-static": "^1.14.2",
     "shortid": "^2.2.16",
     "source-map-support": "^0.5.21",
+    "typescript": "^4.5.4",
     "vm2": "^3.9.5"
   }
 }
