--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
     "play": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/playground.js",
+    "main": "node --experimental-modules --experimental-specifier-resolution=node ./index.js",
     "watch:build": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
     "dev": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/watch.js"
   },
@@ -35,6 +36,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^4.0.8",
     "memory-cache": "^0.2.0",
+    "node-fetch": "^3.1.0",
     "node-html-parser": "^5.2.0",
     "prettier": "^2.5.1",
     "serve-static": "^1.14.2",
