--- a/examples/.deadsimplerc
+++ b/examples/.deadsimplerc
@@ -1,5 +1,5 @@
 {
   "out": "./out",
-  "input": "./examples/advanced/index.html",
+  "input": "./advanced/index.html",
   "pagesFolder": 'pages'
 }
