--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
   "name": "statyk",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A dead simple statyk site generator",
   "homepage": "https://github.com/statykjs/statyk",
   "bugs": {
     "url": "https://github.com/statykjs/statyk/issues"
   },
+  "type": "module",
+  "bin": {
+    "statyk": "bin/cli.cjs"
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/statykjs/statyk/issues"
   },
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
-    "play": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/playground.js",
-    "main": "node --experimental-modules --experimental-specifier-resolution=node ./index.js",
-    "watch:build": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js",
-    "dev": "node --experimental-modules --experimental-specifier-resolution=node ./src/commands/watch.js"
+    "build:prod": "unbuild",
+    "build:stub": "unbuild --stub",
+    "prepack": "npm run build:prod",
+    "dev": "jiti ./src/commands/watch.js --run",
+    "dev:build": "jiti ./src/commands/build.js --run",
+    "dev:index": "jiti ./index.js",
+    "dev:watch": "nodemon --experimental-modules --experimental-specifier-resolution=node ./src/commands/build.js --run"
   },
   "author": "Anurag Hazra <hazru.anurag@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.0.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.2",
+    "commander": "^8.3.0",
     "connect": "^3.7.0",
     "cosmiconfig": "^7.0.1",
+    "esm": "^3.2.25",
     "front-matter": "^4.0.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-entities": "^2.3.2",
     "json-normalize": "^1.1.2",
     "livereload": "^0.9.3",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.8",
     "memory-cache": "^0.2.0",
@@ -43,6 +58,7 @@
     "shortid": "^2.2.16",
     "source-map-support": "^0.5.21",
     "typescript": "^4.5.4",
+    "unbuild": "^0.6.7",
     "vm2": "^3.9.5"
   }
 }
