--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "statyk",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A dead simple statyk site generator",
   "homepage": "https://github.com/statykjs/statyk",
   "bugs": {
@@ -13,10 +13,12 @@
   },
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "repository": {
