--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "connect": "^3.7.0",
     "cosmiconfig": "^7.0.1",
     "esm": "^3.2.25",
-    "front-matter": "^4.0.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-entities": "^2.3.2",
@@ -74,7 +73,6 @@
     "@types/glob": "^7.2.0",
     "@types/livereload": "^0.9.1",
     "@types/marked": "^4.0.1",
-    "@types/serve-static": "^1.13.10",
-    "esbuild-runner": "^2.2.1"
+    "@types/serve-static": "^1.13.10"
   }
 }
